--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,30 @@
+<!--<div class="container">-->
+<!--  <div class="row">-->
+<!--    <div class="col-xs-12">-->
+<!--      <h3>Warning you have an error</h3>-->
+<!--      <hr>-->
+<!--    <app-servers></app-servers>-->
+<!--&lt;!&ndash;      <div app-servers></div> this is as attribute servers.components.ts&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="app-servers"></div>&ndash;&gt;-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h3>I'm in the AppComponent</h3>
+    <div class="col-xs-11">
+      <ol>
+        <li>Create two new Components (Manually or with CLI): WarningAlert and SuccessAlert</li>
+        <li>Output them beneath each other in the AppComponent</li>
+        <li>Output a warning or success message in the components</li>
+        <li>Style the components appropriately (maybe some red/green text?)</li>
+      </ol>
+      <p> Use external or internal templaes and styles!</p>
+      <p>Feel free to creaate more components, nest them into each other or play
+        around with different types of selectors!</p>
       <hr>
-    <app-servers></app-servers>
-<!--      <div app-servers></div> this is as attribute servers.components.ts-->
-<!--        <div class="app-servers"></div>-->
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
     </div>
   </div>
 </div>
-
