--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,8 @@
       <hr>
       <app-warning-alert></app-warning-alert>
       <app-success-alert></app-success-alert>
+      <app-servers></app-servers>
+      <app-server></app-server>
     </div>
   </div>
 </div>
