--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,15 @@
 <!--<p>servers works!</p>-->
+<label>Server name</label>
+<input
+  text="text"
+  class="form-control"
+  (input)="onUpdateServerName($event)">
+  <p>{{serverName}}</p>
+<button class="btn btn-primary"
+        [disabled]="!allowNewServer"
+        (click)="onCreateServer()">Add Server</button>
 
+<!--<p [innerText]="allowNewServer"></p>-->
+<p>{{serverCreationStatus}}</p>
 <app-server></app-server>
-<app-server></app-server>
+
