--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <!--    </div>-->
 <!--  </div>-->
 <!--</div>-->
-
+<h3 align="center">Hello</h3>
 <div class="container">
   <div class="row">
     <div class="col-xs-11">
